--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,3 +1,6 @@
+# Default deployment configuration for Raspberry Pi at home.local
+# Deploy with: kamal deploy (default) or kamal deploy -d production
+
 # Name of your application. Used to uniquely configure containers.
 service: routine
 
@@ -39,6 +42,9 @@ env:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
+    
+    # Set the host for Pi deployment
+    APPLICATION_HOST: home.local
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
