--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore Kamal secrets and backups  
+/.kamal/secrets.local
+/backups/
