--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,4 +1,4 @@
-# Default deployment configuration for Raspberry Pi at home.local
+# Default deployment configuration for Raspberry Pi at home.taile52c2f.ts.net
 # Deploy with: kamal deploy (default) or kamal deploy -d production
 
 # Name of your application. Used to uniquely configure containers.
@@ -12,7 +12,7 @@ image: josephburnett/routine
 # Deploy to these servers.
 servers:
   web:
-    - home.local
+    - home.taile52c2f.ts.net
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
@@ -44,7 +44,7 @@ env:
     SOLID_QUEUE_IN_PUMA: true
     
     # Set the host for Pi deployment
-    APPLICATION_HOST: home.local
+    APPLICATION_HOST: home.taile52c2f.ts.net
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
@@ -96,7 +96,6 @@ builder:
 # Use a different ssh user than root
 ssh:
   user: joe
-  keys: [ "~/.ssh/home.local" ]
 
 # Use accessory services (secrets come from .kamal/secrets).
 # accessories:
