--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,4 +1,4 @@
-# Default deployment configuration for Raspberry Pi at home.taile52c2f.ts.net
+# Default deployment configuration for Raspberry Pi at home.gila-lionfish.ts.net
 # Deploy with: kamal deploy (default) or kamal deploy -d production
 
 # Name of your application. Used to uniquely configure containers.
@@ -12,7 +12,7 @@ image: routine
 # Deploy to these servers.
 servers:
   web:
-    - home.taile52c2f.ts.net
+    - home.gila-lionfish.ts.net
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
@@ -43,7 +43,7 @@ env:
     SOLID_QUEUE_IN_PUMA: true
     
     # Set the host for Pi deployment
-    APPLICATION_HOST: home.taile52c2f.ts.net
+    APPLICATION_HOST: home.gila-lionfish.ts.net
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
