--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -1,4 +1,4 @@
-# Default deployment configuration for Raspberry Pi at home.gila-lionfish.ts.net
+# Default deployment configuration for RTB server at rtb.gila-lionfish.ts.net
 # Deploy with: kamal deploy (default) or kamal deploy -d production
 
 # Name of your application. Used to uniquely configure containers.
@@ -12,21 +12,23 @@ image: routine
 # Deploy to these servers.
 servers:
   web:
-    - home.gila-lionfish.ts.net
+    - rtb.gila-lionfish.ts.net
 
 # Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
+# Note: Running on port 10001 to avoid conflict with other web server on rtb
+# The proxy container is manually configured to map port 10001:80
 proxy:
+  host: rtb.gila-lionfish.ts.net
   app_port: 3000
 #  ssl: true
-#  host: app.example.com
 
 # Registry configuration - we use direct SSH push via docker-pussh (unregistry)
-# Images are pushed directly to the Pi over Tailscale SSH without a registry
-# The registry config is kept minimal to satisfy Kamal requirements
-# See bin/deploy-pi for deployment workflow
+# Images are pushed directly to RTB over Tailscale SSH without a registry
+# We configure a dummy local registry to satisfy Kamal requirements
+# See bin/deploy-rtb for deployment workflow
 registry:
   server: localhost
   username: routine
@@ -42,8 +44,8 @@ env:
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
     
-    # Set the host for Pi deployment
-    APPLICATION_HOST: home.gila-lionfish.ts.net
+    # Set the host for RTB deployment
+    APPLICATION_HOST: rtb.gila-lionfish.ts.net
 
     # Set number of processes dedicated to Solid Queue (default: 1)
     # JOB_CONCURRENCY: 3
@@ -80,7 +82,7 @@ asset_path: /rails/public/assets
 
 # Configure the image builder.
 builder:
-  arch: arm/v7
+  arch: amd64
 
   # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
   # remote: ssh://docker@docker-builder-server
@@ -95,6 +97,8 @@ builder:
 # Use a different ssh user than root
 ssh:
   user: joe
+  keys:
+    - ~/.ssh/rtb.local
 
 # Use accessory services (secrets come from .kamal/secrets).
 # accessories:
