--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,7 +7,7 @@ service: routine
 deploy_timeout: 300
 
 # Name of the container image.
-image: routine
+image: josephburnett/routine
 
 # Deploy to these servers.
 servers:
@@ -19,20 +19,20 @@ servers:
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 # Note: Running on port 10001 to avoid conflict with other web server on rtb
-# The proxy container is manually configured to map port 10001:80
 proxy:
   host: rtb.gila-lionfish.ts.net
   app_port: 3000
-#  ssl: true
+  ssl: true
 
-# Registry configuration - we use direct SSH push via docker-pussh (unregistry)
-# Images are pushed directly to RTB over Tailscale SSH without a registry
-# We configure a dummy local registry to satisfy Kamal requirements
-# See bin/deploy-rtb for deployment workflow
+# Credentials for your image host.
 registry:
-  server: localhost
-  username: routine
-  password: dummy
+  # Specify the registry server, if you're not using Docker Hub
+  # server: registry.digitalocean.com / ghcr.io / ...
+  username: josephburnett
+
+  # Always use an access token rather than real password when possible.
+  password:
+    - KAMAL_REGISTRY_PASSWORD
 
 # Inject ENV variables into containers (secrets come from .kamal/secrets).
 env:
