--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -14,15 +14,15 @@ servers:
   web:
     - rtb.gila-lionfish.ts.net
 
-# Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
-# Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
-#
-# Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-# Note: Running on port 10001 to avoid conflict with other web server on rtb
+# Proxy configuration for Tailscale serve setup:
+# - Tailscale serve handles SSL termination and proxies to 127.0.0.1:10001
+# - kamal-proxy should NOT handle SSL (Tailscale does it)
+# - Bind to 127.0.0.1 to avoid conflict with Tailscale's port binding
 proxy:
   host: rtb.gila-lionfish.ts.net
   app_port: 3000
-  ssl: true
+  ssl: false
+  port: "127.0.0.1:10001"
 
 # Credentials for your image host.
 registry:
